[gd_scene load_steps=2 format=3 uid="uid://xjpdtddgoynt"]

[ext_resource type="Script" path="res://addons/BlockResourceGenerator/block_resource_generator.gd" id="1_t5bfv"]

[node name="BlockResourceGenerator" type="VBoxContainer"]
offset_right = 512.0
offset_bottom = 679.0
script = ExtResource("1_t5bfv")

[node name="ShapeDropdown" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "L"
popup/item_1/text = "LongBoy"
popup/item_1/id = 1
popup/item_2/text = "Shuriken"
popup/item_2/id = 2

[node name="AttackHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AttackValueLabel" type="Label" parent="AttackHBox"]
layout_mode = 2

[node name="Attack" type="Label" parent="AttackHBox"]
layout_mode = 2
text = "Attack"

[node name="AttackSlider" type="HSlider" parent="AttackHBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 8.0
value = 1.0

[node name="ShieldHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ShieldValueLabel" type="Label" parent="ShieldHBox"]
layout_mode = 2

[node name="Shield" type="Label" parent="ShieldHBox"]
layout_mode = 2
text = "Shield
"

[node name="ShieldSlider" type="HSlider" parent="ShieldHBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 8.0

[node name="BonusDiceHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BonusDiceValueLabel" type="Label" parent="BonusDiceHBox"]
layout_mode = 2

[node name="BonusDice" type="Label" parent="BonusDiceHBox"]
layout_mode = 2
text = "Bonus Dice"

[node name="BonusDiceSlider" type="HSlider" parent="BonusDiceHBox"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 3.0
value = 1.0

[node name="DiceHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DiceValueLabel" type="Label" parent="DiceHBox"]
layout_mode = 2

[node name="Dice" type="Label" parent="DiceHBox"]
layout_mode = 2
text = "Dice Cost"

[node name="DiceSlider" type="HSlider" parent="DiceHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 6.0
value = 1.0

[node name="PriceHBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="PriceValueLabel" type="Label" parent="PriceHBox"]
layout_mode = 2

[node name="Price" type="Label" parent="PriceHBox"]
layout_mode = 2
text = "Price"

[node name="PriceSlider" type="HSlider" parent="PriceHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 6.0
value = 1.0

[node name="Save Block Button" type="Button" parent="."]
layout_mode = 2
text = "Save Block"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 2
text = "ðŸŒ€ Live Preview: L A1 B0 D1"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="PreviewViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1080, 1080)
render_target_update_mode = 4

[node name="shape_edit_dropdown" type="OptionButton" parent="."]
layout_mode = 2

[connection signal="pressed" from="Save Block Button" to="." method="_on_save_pressed"]
